--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^5.0.1",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^11.13.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
